# ArKomp

./: .gitignore  .gitmodules  Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs  logging.rs  operator.rs  skin.rs  texture.rs
shared/src/events/: mod.rs
shared/src/ipc/: command_context.rs  mod.rs
shared/src/ipc/commands/: load_plugin.rs  mod.rs  retreat_operator.rs  schedule_event.rs  spawn_operator.rs  spawn_operatpr.rs  unload_plugin.rs
shared/src/plugin/: mod.rs
shared/src/plugin/types/: mod.rs  operator_plugin.rs
src/: ipc_handler.rs  main.rs  plugin.rs
src/kore/: mod.rs
src/plugin/: mod.rs  operator_plugin.rs
src/ui/: mod.rs
