[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
eframe.workspace = true
rusty_spine.workspace = true
wgpu = "26.0.1"
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
ron = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
libloading = "0.8.9"
